gitignore e Tradução do astro para PTBR. EM BREVE

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -21,7 +21,7 @@ hero:
     alt: "Bolls Technology"
   actions:
     - text: Começar agora
-      link: /guides/example/
+      link: /embreve/embreve
       icon: right-arrow
       variant: primary
     - text: "Precisa de ajuda? Entra no Discord"
@@ -55,12 +55,12 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
   <Card title="Guia de Início Rápido" icon="document">
     Siga nosso tutorial passo a passo e tenha seu primeiro agente rodando em <b>menos de 5 minutos</b>.
     <br /><br />
-    [Começar agora →](/guides/example/)
+    [Começar agora →](/embreve/embreve)
   </Card>
   <Card title="Referência Completa da API" icon="open-book">
     Documentação detalhada de todos os endpoints, parâmetros e exemplos de código em múltiplas linguagens.
     <br /><br />
-    [Ver Referência →](/reference/example/)
+    [Ver Referência →](/embreve/embreve)
   </Card>
 </CardGrid>
 
@@ -80,6 +80,6 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 <div class="contribute-footer">
   <p><b>Pronto para começar?</b></p>
   <p>
-    Consulte nossa <a href="/guides/example/">documentação</a> ou <a href="https://bolls.tech/discord" target="_blank">entre no Discord</a> para suporte!
+    Consulte nossa <a href="/embreve/embreve">documentação</a> ou <a href="https://bolls.tech/discord" target="_blank">entre no Discord</a> para suporte!
   </p>
 </div>
